// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component in moved car form matches snapshot 1`] = `
<div>
  <p>
    Pakolliset kentät on merkitty tähdellä *
  </p>
  <div>
    <div
      class="rectification-info-container"
    >
      <div
        class="radio-group-section"
      >
        <legend
          class="field-label"
        >
          Teen oikaisuvaatimuksen
          <span
            class="required-icon"
          >
            *
          </span>
        </legend>
        <div
          class="radio-group-container"
        >
          <div
            class="RadioButton-module_radioButton__1xM1I radio-button_hds-radio-button__1kktv"
          >
            <input
              class="RadioButton-module_input__1cTWc radio-button_hds-radio-button__input__27sH6"
              id="2"
              type="radio"
              value="2"
            />
            <label
              class="RadioButton-module_label__3Zij9 radio-button_hds-radio-button__label__1XnIa"
              for="2"
            >
              Ajoneuvon omistajana/haltijana
            </label>
          </div>
          <div
            class="RadioButton-module_radioButton__1xM1I radio-button_hds-radio-button__1kktv"
          >
            <input
              class="RadioButton-module_input__1cTWc radio-button_hds-radio-button__input__27sH6"
              id="3"
              type="radio"
              value="3"
            />
            <label
              class="RadioButton-module_label__3Zij9 radio-button_hds-radio-button__label__1XnIa"
              for="3"
            >
              Valtakirjalla (toisen puolesta)
            </label>
          </div>
        </div>
      </div>
      <div
        class="rectification-form-user-details"
      >
        <div>
          <div>
            <legend
              class="field-label"
            >
              Nimi
              <span
                class="required-icon"
              >
                *
              </span>
            </legend>
            <svg
              aria-hidden="true"
              aria-label="check-circle"
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
              color="var(--color-info)"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM16.5 8L18 9.5L10.5 17L6 12.5L7.5 11L10.5 14L16.5 8Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <p>
            Test User
          </p>
          <div>
            <legend
              class="field-label"
            >
              Henkilötunnus
              <span
                class="required-icon"
              >
                *
              </span>
            </legend>
            <svg
              aria-hidden="true"
              aria-label="check-circle"
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
              color="var(--color-info)"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM16.5 8L18 9.5L10.5 17L6 12.5L7.5 11L10.5 14L16.5 8Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <p>
            123456-789A
          </p>
          <div>
            <legend
              class="field-label"
            >
              Sähköpostiosoite
              <span
                class="required-icon"
              >
                *
              </span>
            </legend>
            <svg
              aria-hidden="true"
              aria-label="check-circle"
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
              color="var(--color-info)"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM16.5 8L18 9.5L10.5 17L6 12.5L7.5 11L10.5 14L16.5 8Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <p>
            test.user@test.fi
          </p>
        </div>
      </div>
      <div
        class="rectification-poa-fileinput"
      >
        <div
          class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="rectificationPOAFile"
          >
            Liitä valtakirja
          </label>
          <div
            class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
          >
            <div
              class="FileInput-module_fileInputContainer__9N5TG"
            >
              <div
                aria-hidden="true"
                class="FileInput-module_dragAndDrop__3d3xe"
              >
                <div
                  class="FileInput-module_dragAndDropLabel__1pDQN"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="upload"
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 1.63605L17.6569 7.2929L16.2426 8.70712L13 5.46505V18H11V5.46505L7.75736 8.70712L6.34315 7.2929L12 1.63605ZM5 15V20H19V15H21V22H3V15H5Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  <span
                    class="FileInput-module_dragAndDropLabelText__3AJ4P"
                  >
                    Raahaa tiedostot tähän
                  </span>
                </div>
              </div>
              <div
                class="FileInput-module_dragAndDropHelperText__31Ljw"
              >
                tai valitse tiedostot laitteeltasi
              </div>
              <div
                class="FileInput-module_fileInputWrapper__1E8Jf"
              >
                <button
                  aria-hidden="true"
                  class="Button-module_button__1msFE button_hds-button__2A0je Button-module_secondary__1nABp button_hds-button--secondary__1NOWS"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    aria-hidden="true"
                    class="Button-module_icon__O-h7R button_hds-icon__17j8Z"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="plus"
                      class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M13 6V11H18V13H13V18H11V13H6V11H11V6H13Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <span
                    class="Button-module_label__a4np1 button_hds-button__label__2EQa-"
                  >
                    Lisää tiedosto
                  </span>
                </button>
                <input
                  accept=".jpg, .pdf"
                  aria-describedby="rectificationPOAFile-helper rectificationPOAFile-info"
                  class="FileInput-module_fileInput__hClRc"
                  id="rectificationPOAFile"
                  type="file"
                />
              </div>
            </div>
          </div>
          <div
            class="TextInput-module_infoText__zHOGs text-input_hds-text-input__info-text__3bqzy"
            id="rectificationPOAFile-info"
          >
            Yhtään tiedostoa ei ole valittu.
          </div>
          <div
            class="TextInput-module_helperText__2dLR6 text-input_hds-text-input__helper-text__3V2KM"
            id="rectificationPOAFile-helper"
          >
            Voit liittää vain yhden tiedoston. 
Sallitut tiedostomuodot ovat JPG ja PDF. 
Liitetiedoston suurin sallittu koko on 5 megatavua.
          </div>
        </div>
        <ul
          aria-label="Yhtään tiedostoa ei ole valittu."
          class="FileInput-module_fileList__drFD1"
          id="rectificationPOAFile-list"
          tabindex="-1"
        />
      </div>
    </div>
    <hr />
    <div
      class="rectification-link-to-profile"
    >
      <svg
        aria-hidden="true"
        aria-label="check-circle"
        class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
        color="var(--color-info)"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM16.5 8L18 9.5L10.5 17L6 12.5L7.5 11L10.5 14L16.5 8Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        Merkityt tiedot on haettu Helsinki-profiilistasi.
      </span>
      <a
        aria-label="Siirry Helsinki-profiiliin muokataksesi tietoja. Avautuu uudessa välilehdessä. Avaa toisen verkkosivun."
        class="Link-module_link__TeBQo link_hds-link__5Oxo- Link-module_linkM__30gsY link_hds-link--medium__xEU_F"
        href="https://profiili.test.hel.ninja"
        rel="noopener"
        target="_blank"
      >
        Siirry Helsinki-profiiliin muokataksesi tietoja.
        <svg
          aria-hidden="true"
          aria-label="link-external"
          class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik Link-module_icon__3ReCc link_icon__i_HqN Link-module_verticalAlignMediumIcon__12PVa link_vertical-align-medium-icon__3IWi1"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5 3V19H21V21H3V3H5ZM21 3V12H19V6.413L9.91421 15.5L8.5 14.0858L17.585 5H12V3H21Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </a>
    </div>
    <div
      class="rectification-form-container"
    >
      <div
        class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz"
      >
        <input
          class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
          id="toSeparateEmail"
          type="checkbox"
          value=""
        />
        <label
          class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
          for="toSeparateEmail"
        >
          Haluan ilmoitukset asian käsittelystä eri sähköpostiosoitteeseen
        </label>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="newEmailAddress"
        >
          Sähköpostiosoite
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            disabled=""
            id="newEmailAddress"
            name="newEmail"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="newEmailConfirm"
        >
          Kirjoita sähköpostiosoite uudelleen
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            disabled=""
            id="newEmailConfirm"
            name="newEmailConfirm"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="address"
        >
          Lähiosoite
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            id="address"
            name="address.streetAddress"
            placeholder="Esim. Elimäenkatu 5"
            required=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="rectification-subgrid"
      >
        <div
          class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="zipCode"
          >
            Postinumero
            <span
              class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
            >
              *
            </span>
          </label>
          <div
            class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
          >
            <input
              class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
              id="zipCode"
              name="address.postCode"
              placeholder="Esim. 00100"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="city"
          >
            Postitoimipaikka
            <span
              class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
            >
              *
            </span>
          </label>
          <div
            class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
          >
            <input
              class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
              id="city"
              name="address.postOffice"
              placeholder="Esim. Helsinki"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="phone"
        >
          Puhelinnumero
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            id="phone"
            name="mobilePhone"
            placeholder="Esim. +358401234567"
            required=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="IBAN"
        >
          Pankkitilinumero (IBAN)
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            id="IBAN"
            name="iban"
            placeholder="Esim. FI97 8000 1700 9033 30"
            required=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq rectification-textarea"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="rectification-content"
        >
          Oikaisuvaatimuksen sisältö
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <textarea
            aria-describedby="rectification-content-helper"
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            id="rectification-content"
            name="description"
            required=""
          />
        </div>
        
        <div
          class="TextInput-module_helperText__2dLR6 text-input_hds-text-input__helper-text__3V2KM"
          id="rectification-content-helper"
        >
          undefined/2500 merkkiä
        </div>
      </div>
      <div
        class="rectification-attachments"
      >
        <div
          class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq rectification-fileinput"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="rectificationAttachments"
          >
            Liitetiedostot
          </label>
          <div
            class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
          >
            <div
              class="FileInput-module_fileInputContainer__9N5TG"
            >
              <div
                aria-hidden="true"
                class="FileInput-module_dragAndDrop__3d3xe"
              >
                <div
                  class="FileInput-module_dragAndDropLabel__1pDQN"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="upload"
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 1.63605L17.6569 7.2929L16.2426 8.70712L13 5.46505V18H11V5.46505L7.75736 8.70712L6.34315 7.2929L12 1.63605ZM5 15V20H19V15H21V22H3V15H5Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  <span
                    class="FileInput-module_dragAndDropLabelText__3AJ4P"
                  >
                    Raahaa tiedostot tähän
                  </span>
                </div>
              </div>
              <div
                class="FileInput-module_dragAndDropHelperText__31Ljw"
              >
                tai valitse tiedostot laitteeltasi
              </div>
              <div
                class="FileInput-module_fileInputWrapper__1E8Jf"
              >
                <button
                  aria-hidden="true"
                  class="Button-module_button__1msFE button_hds-button__2A0je Button-module_secondary__1nABp button_hds-button--secondary__1NOWS"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    aria-hidden="true"
                    class="Button-module_icon__O-h7R button_hds-icon__17j8Z"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="plus"
                      class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M13 6V11H18V13H13V18H11V13H6V11H11V6H13Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <span
                    class="Button-module_label__a4np1 button_hds-button__label__2EQa-"
                  >
                    Lisää tiedostoja
                  </span>
                </button>
                <input
                  accept=".jpg, .pdf"
                  aria-describedby="rectificationAttachments-helper rectificationAttachments-info"
                  class="FileInput-module_fileInput__hClRc"
                  id="rectificationAttachments"
                  multiple=""
                  type="file"
                />
              </div>
            </div>
          </div>
          <div
            class="TextInput-module_infoText__zHOGs text-input_hds-text-input__info-text__3bqzy"
            id="rectificationAttachments-info"
          >
            Yhtään tiedostoa ei ole valittu.
          </div>
          <div
            class="TextInput-module_helperText__2dLR6 text-input_hds-text-input__helper-text__3V2KM"
            id="rectificationAttachments-helper"
          >
            Voit liittää oikaisuvaatimukseen enintään kolme liitettä. 
Sallitut tiedostomuodot ovat JPG ja PDF. 
Liitetiedoston suurin sallittu koko on 5 megatavua.
          </div>
        </div>
        <ul
          aria-label="Yhtään tiedostoa ei ole valittu."
          class="FileInput-module_fileList__drFD1"
          id="rectificationAttachments-list"
          tabindex="-1"
        />
      </div>
      <div
        class="rectification-delivery-decision radio-group-section"
      >
        <legend
          class="field-label"
        >
          Haluan päätöksen
          <span
            class="required-icon"
          >
            *
          </span>
        </legend>
        <div
          class="radio-group-container"
        >
          <div
            class="RadioButton-module_radioButton__1xM1I radio-button_hds-radio-button__1kktv"
          >
            <input
              class="RadioButton-module_input__1cTWc radio-button_hds-radio-button__input__27sH6"
              id="toParkingService"
              type="radio"
              value="toParkingService"
            />
            <label
              class="RadioButton-module_label__3Zij9 radio-button_hds-radio-button__label__1XnIa"
              for="toParkingService"
            >
              Pysäköinnin asiointikansiooni
            </label>
          </div>
          <div
            class="RadioButton-module_radioButton__1xM1I radio-button_hds-radio-button__1kktv"
          >
            <input
              class="RadioButton-module_input__1cTWc radio-button_hds-radio-button__input__27sH6"
              id="byMail"
              type="radio"
              value="byMail"
            />
            <label
              class="RadioButton-module_label__3Zij9 radio-button_hds-radio-button__label__1XnIa"
              for="byMail"
            >
              Kirjeitse antamaani osoitteeseen
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component in parking fine appeal form matches snapshot 1`] = `
<div>
  <p>
    Pakolliset kentät on merkitty tähdellä *
  </p>
  <div>
    <div
      class="rectification-info-container"
    >
      <div
        class="radio-group-section"
      >
        <legend
          class="field-label"
        >
          Teen oikaisuvaatimuksen
          <span
            class="required-icon"
          >
            *
          </span>
        </legend>
        <div
          class="radio-group-container"
        >
          <div
            class="RadioButton-module_radioButton__1xM1I radio-button_hds-radio-button__1kktv"
          >
            <input
              class="RadioButton-module_input__1cTWc radio-button_hds-radio-button__input__27sH6"
              id="1"
              type="radio"
              value="1"
            />
            <label
              class="RadioButton-module_label__3Zij9 radio-button_hds-radio-button__label__1XnIa"
              for="1"
            >
              Ajoneuvon kuljettajana
            </label>
          </div>
          <div
            class="RadioButton-module_radioButton__1xM1I radio-button_hds-radio-button__1kktv"
          >
            <input
              class="RadioButton-module_input__1cTWc radio-button_hds-radio-button__input__27sH6"
              id="2"
              type="radio"
              value="2"
            />
            <label
              class="RadioButton-module_label__3Zij9 radio-button_hds-radio-button__label__1XnIa"
              for="2"
            >
              Ajoneuvon omistajana/haltijana
            </label>
          </div>
          <div
            class="RadioButton-module_radioButton__1xM1I radio-button_hds-radio-button__1kktv"
          >
            <input
              class="RadioButton-module_input__1cTWc radio-button_hds-radio-button__input__27sH6"
              id="3"
              type="radio"
              value="3"
            />
            <label
              class="RadioButton-module_label__3Zij9 radio-button_hds-radio-button__label__1XnIa"
              for="3"
            >
              Valtakirjalla (toisen puolesta)
            </label>
          </div>
        </div>
      </div>
      <div
        class="rectification-form-user-details"
      >
        <div>
          <div>
            <legend
              class="field-label"
            >
              Nimi
              <span
                class="required-icon"
              >
                *
              </span>
            </legend>
            <svg
              aria-hidden="true"
              aria-label="check-circle"
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
              color="var(--color-info)"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM16.5 8L18 9.5L10.5 17L6 12.5L7.5 11L10.5 14L16.5 8Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <p>
            Test User
          </p>
          <div>
            <legend
              class="field-label"
            >
              Henkilötunnus
              <span
                class="required-icon"
              >
                *
              </span>
            </legend>
            <svg
              aria-hidden="true"
              aria-label="check-circle"
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
              color="var(--color-info)"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM16.5 8L18 9.5L10.5 17L6 12.5L7.5 11L10.5 14L16.5 8Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <p>
            123456-789A
          </p>
          <div>
            <legend
              class="field-label"
            >
              Sähköpostiosoite
              <span
                class="required-icon"
              >
                *
              </span>
            </legend>
            <svg
              aria-hidden="true"
              aria-label="check-circle"
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
              color="var(--color-info)"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM16.5 8L18 9.5L10.5 17L6 12.5L7.5 11L10.5 14L16.5 8Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <p>
            test.user@test.fi
          </p>
        </div>
      </div>
      <div
        class="rectification-poa-fileinput"
      >
        <div
          class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="rectificationPOAFile"
          >
            Liitä valtakirja
          </label>
          <div
            class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
          >
            <div
              class="FileInput-module_fileInputContainer__9N5TG"
            >
              <div
                aria-hidden="true"
                class="FileInput-module_dragAndDrop__3d3xe"
              >
                <div
                  class="FileInput-module_dragAndDropLabel__1pDQN"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="upload"
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 1.63605L17.6569 7.2929L16.2426 8.70712L13 5.46505V18H11V5.46505L7.75736 8.70712L6.34315 7.2929L12 1.63605ZM5 15V20H19V15H21V22H3V15H5Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  <span
                    class="FileInput-module_dragAndDropLabelText__3AJ4P"
                  >
                    Raahaa tiedostot tähän
                  </span>
                </div>
              </div>
              <div
                class="FileInput-module_dragAndDropHelperText__31Ljw"
              >
                tai valitse tiedostot laitteeltasi
              </div>
              <div
                class="FileInput-module_fileInputWrapper__1E8Jf"
              >
                <button
                  aria-hidden="true"
                  class="Button-module_button__1msFE button_hds-button__2A0je Button-module_secondary__1nABp button_hds-button--secondary__1NOWS"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    aria-hidden="true"
                    class="Button-module_icon__O-h7R button_hds-icon__17j8Z"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="plus"
                      class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M13 6V11H18V13H13V18H11V13H6V11H11V6H13Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <span
                    class="Button-module_label__a4np1 button_hds-button__label__2EQa-"
                  >
                    Lisää tiedosto
                  </span>
                </button>
                <input
                  accept=".jpg, .pdf"
                  aria-describedby="rectificationPOAFile-helper rectificationPOAFile-info"
                  class="FileInput-module_fileInput__hClRc"
                  id="rectificationPOAFile"
                  type="file"
                />
              </div>
            </div>
          </div>
          <div
            class="TextInput-module_infoText__zHOGs text-input_hds-text-input__info-text__3bqzy"
            id="rectificationPOAFile-info"
          >
            Yhtään tiedostoa ei ole valittu.
          </div>
          <div
            class="TextInput-module_helperText__2dLR6 text-input_hds-text-input__helper-text__3V2KM"
            id="rectificationPOAFile-helper"
          >
            Voit liittää vain yhden tiedoston. 
Sallitut tiedostomuodot ovat JPG ja PDF. 
Liitetiedoston suurin sallittu koko on 5 megatavua.
          </div>
        </div>
        <ul
          aria-label="Yhtään tiedostoa ei ole valittu."
          class="FileInput-module_fileList__drFD1"
          id="rectificationPOAFile-list"
          tabindex="-1"
        />
      </div>
    </div>
    <hr />
    <div
      class="rectification-link-to-profile"
    >
      <svg
        aria-hidden="true"
        aria-label="check-circle"
        class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
        color="var(--color-info)"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM16.5 8L18 9.5L10.5 17L6 12.5L7.5 11L10.5 14L16.5 8Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        Merkityt tiedot on haettu Helsinki-profiilistasi.
      </span>
      <a
        aria-label="Siirry Helsinki-profiiliin muokataksesi tietoja. Avautuu uudessa välilehdessä. Avaa toisen verkkosivun."
        class="Link-module_link__TeBQo link_hds-link__5Oxo- Link-module_linkM__30gsY link_hds-link--medium__xEU_F"
        href="https://profiili.test.hel.ninja"
        rel="noopener"
        target="_blank"
      >
        Siirry Helsinki-profiiliin muokataksesi tietoja.
        <svg
          aria-hidden="true"
          aria-label="link-external"
          class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik Link-module_icon__3ReCc link_icon__i_HqN Link-module_verticalAlignMediumIcon__12PVa link_vertical-align-medium-icon__3IWi1"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5 3V19H21V21H3V3H5ZM21 3V12H19V6.413L9.91421 15.5L8.5 14.0858L17.585 5H12V3H21Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </a>
    </div>
    <div
      class="rectification-form-container"
    >
      <div
        class="Checkbox-module_checkbox__3L0GR checkbox_hds-checkbox__9HMCz"
      >
        <input
          class="Checkbox-module_input__3VZvy checkbox_hds-checkbox__input__1w0pu"
          id="toSeparateEmail"
          type="checkbox"
          value=""
        />
        <label
          class="Checkbox-module_label__L5AN1 checkbox_hds-checkbox__label__3HoD3"
          for="toSeparateEmail"
        >
          Haluan ilmoitukset asian käsittelystä eri sähköpostiosoitteeseen
        </label>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="newEmailAddress"
        >
          Sähköpostiosoite
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            disabled=""
            id="newEmailAddress"
            name="newEmail"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="newEmailConfirm"
        >
          Kirjoita sähköpostiosoite uudelleen
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            disabled=""
            id="newEmailConfirm"
            name="newEmailConfirm"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="address"
        >
          Lähiosoite
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            id="address"
            name="address.streetAddress"
            placeholder="Esim. Elimäenkatu 5"
            required=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="rectification-subgrid"
      >
        <div
          class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="zipCode"
          >
            Postinumero
            <span
              class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
            >
              *
            </span>
          </label>
          <div
            class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
          >
            <input
              class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
              id="zipCode"
              name="address.postCode"
              placeholder="Esim. 00100"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="city"
          >
            Postitoimipaikka
            <span
              class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
            >
              *
            </span>
          </label>
          <div
            class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
          >
            <input
              class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
              id="city"
              name="address.postOffice"
              placeholder="Esim. Helsinki"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="phone"
        >
          Puhelinnumero
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            id="phone"
            name="mobilePhone"
            placeholder="Esim. +358401234567"
            required=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="IBAN"
        >
          Pankkitilinumero (IBAN)
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <input
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            id="IBAN"
            name="iban"
            placeholder="Esim. FI97 8000 1700 9033 30"
            required=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq rectification-textarea"
      >
        <label
          class="FieldLabel-module_label__1zrXK "
          for="rectification-content"
        >
          Oikaisuvaatimuksen sisältö
          <span
            class="RequiredIndicator-module_indicator__Pt7GX text-input_hds-text-input__required__2K-Bs"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
        >
          <textarea
            aria-describedby="rectification-content-helper"
            class="TextInput-module_input__1BlHi text-input_hds-text-input__input__GJm5C"
            id="rectification-content"
            name="description"
            required=""
          />
        </div>
        
        <div
          class="TextInput-module_helperText__2dLR6 text-input_hds-text-input__helper-text__3V2KM"
          id="rectification-content-helper"
        >
          undefined/2500 merkkiä
        </div>
      </div>
      <div
        class="rectification-attachments"
      >
        <div
          class="TextInput-module_root__2CMNr text-input_hds-text-input__2LODq rectification-fileinput"
        >
          <label
            class="FieldLabel-module_label__1zrXK "
            for="rectificationAttachments"
          >
            Liitetiedostot
          </label>
          <div
            class="TextInput-module_inputWrapper__3Rvel text-input_hds-text-input__input-wrapper__1OqYG"
          >
            <div
              class="FileInput-module_fileInputContainer__9N5TG"
            >
              <div
                aria-hidden="true"
                class="FileInput-module_dragAndDrop__3d3xe"
              >
                <div
                  class="FileInput-module_dragAndDropLabel__1pDQN"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="upload"
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 1.63605L17.6569 7.2929L16.2426 8.70712L13 5.46505V18H11V5.46505L7.75736 8.70712L6.34315 7.2929L12 1.63605ZM5 15V20H19V15H21V22H3V15H5Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  <span
                    class="FileInput-module_dragAndDropLabelText__3AJ4P"
                  >
                    Raahaa tiedostot tähän
                  </span>
                </div>
              </div>
              <div
                class="FileInput-module_dragAndDropHelperText__31Ljw"
              >
                tai valitse tiedostot laitteeltasi
              </div>
              <div
                class="FileInput-module_fileInputWrapper__1E8Jf"
              >
                <button
                  aria-hidden="true"
                  class="Button-module_button__1msFE button_hds-button__2A0je Button-module_secondary__1nABp button_hds-button--secondary__1NOWS"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    aria-hidden="true"
                    class="Button-module_icon__O-h7R button_hds-icon__17j8Z"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="plus"
                      class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M13 6V11H18V13H13V18H11V13H6V11H11V6H13Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <span
                    class="Button-module_label__a4np1 button_hds-button__label__2EQa-"
                  >
                    Lisää tiedostoja
                  </span>
                </button>
                <input
                  accept=".jpg, .pdf"
                  aria-describedby="rectificationAttachments-helper rectificationAttachments-info"
                  class="FileInput-module_fileInput__hClRc"
                  id="rectificationAttachments"
                  multiple=""
                  type="file"
                />
              </div>
            </div>
          </div>
          <div
            class="TextInput-module_infoText__zHOGs text-input_hds-text-input__info-text__3bqzy"
            id="rectificationAttachments-info"
          >
            Yhtään tiedostoa ei ole valittu.
          </div>
          <div
            class="TextInput-module_helperText__2dLR6 text-input_hds-text-input__helper-text__3V2KM"
            id="rectificationAttachments-helper"
          >
            Voit liittää oikaisuvaatimukseen enintään kolme liitettä. 
Sallitut tiedostomuodot ovat JPG ja PDF. 
Liitetiedoston suurin sallittu koko on 5 megatavua.
          </div>
        </div>
        <ul
          aria-label="Yhtään tiedostoa ei ole valittu."
          class="FileInput-module_fileList__drFD1"
          id="rectificationAttachments-list"
          tabindex="-1"
        />
      </div>
      <div
        class="rectification-delivery-decision radio-group-section"
      >
        <legend
          class="field-label"
        >
          Haluan päätöksen
          <span
            class="required-icon"
          >
            *
          </span>
        </legend>
        <div
          class="radio-group-container"
        >
          <div
            class="RadioButton-module_radioButton__1xM1I radio-button_hds-radio-button__1kktv"
          >
            <input
              class="RadioButton-module_input__1cTWc radio-button_hds-radio-button__input__27sH6"
              id="toParkingService"
              type="radio"
              value="toParkingService"
            />
            <label
              class="RadioButton-module_label__3Zij9 radio-button_hds-radio-button__label__1XnIa"
              for="toParkingService"
            >
              Pysäköinnin asiointikansiooni
            </label>
          </div>
          <div
            class="RadioButton-module_radioButton__1xM1I radio-button_hds-radio-button__1kktv"
          >
            <input
              class="RadioButton-module_input__1cTWc radio-button_hds-radio-button__input__27sH6"
              id="byMail"
              type="radio"
              value="byMail"
            />
            <label
              class="RadioButton-module_label__3Zij9 radio-button_hds-radio-button__label__1XnIa"
              for="byMail"
            >
              Kirjeitse antamaani osoitteeseen
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
